# SMArtIInt

./: .gitignore  .gitmodules  DymolaStartup.mos  LICENSE  README.md  compile.bat  compile.sh  deploy.sh
CSource/: CMakeLists.txt
CSource/CMake/: Default.cmake
CSource/SMArtIInt/: CMakeLists.txt  InputManagement.cpp  InputManagement.h  InputManagementONNX.cpp  InputManagementONNX.h  InputManagementTF.cpp  InputManagementTF.h  InterfaceFunctions.cpp  InterfaceFunctions.h  NNBuffer.h  NeuralNet.cpp  NeuralNet.h  NeuralNetONNX.cpp  NeuralNetONNX.h  NeuralNetTF.cpp  NeuralNetTF.h  RollingBuffer.cpp  RollingBuffer.h  RollingBuffer.tpp  TensorflowDllHandler.h  TensorflowDllHandlerLinux.cpp  TensorflowDllHandlerLinux.h  TensorflowDllHandlerWin.cpp  TensorflowDllHandlerWin.h  Utils.cpp  Utils.h
ExampleNeuralNets/: requirements.txt
ExampleNeuralNets/NNHeatTransfer/: createLocalHeatTransferNN.py  model_large.tflite
ExampleNeuralNets/PIController/: PI.py
SMArtIInt/: libraryinfo.mos  package.mo  package.order
SMArtIInt/BaseClasses/: BaseFeedForwardNeuralNet.mo  BaseGenericNeuralNet.mo  BaseNeuralNet.mo  BaseRecurrentNeuralNet.mo  BaseStatefulRecurrentNeuralNet.mo  package.mo  package.order
SMArtIInt/Blocks/: EvaluateGenericNeuralNetwork.mo  EvaluateRecurrentNeuralNet.mo  EvaluateSimpleFeedForwardNeuralNetwork.mo  EvaluateStatefulRecurrentNeuralNet.mo  package.mo  package.order
SMArtIInt/Interfaces/: RealVectorInput.mo  RealVectorOutput.mo  package.mo  package.order
SMArtIInt/Internal/: ModelicaUtilityHelper.mo  SMArtIIntClass.mo  package.mo  package.order
SMArtIInt/Internal/ClaRaDelay/: ExternalTable.mo  ExternalTables.mo  getDelayValuesAtTime.mo  getDelayValuesAtTimeArray.mo  package.mo  package.order
SMArtIInt/Internal/InterfaceFunctions/: initializeStates.mo  package.mo  package.order  runInferenceFlatTensor.mo
SMArtIInt/Internal/Utilities/: RunInferenceFlatInput.mo  RunInferenceFlatInputStatefulRNN.mo  RunInterferenceRNN.mo  package.mo  package.order
SMArtIInt/Internal/Utilities/SubModels/: Array2DDeflatteningModel.mo  Array2DFlatteningModel.mo  RNNDeflattenOutput.mo  RNNFlattenInput.mo  RNNFlatteningMethod.mo  package.mo  package.order
SMArtIInt/Internal/Utilities/SubModels/Tests/: Test_FlatInputHistory.mo  package.mo  package.order
SMArtIInt/Resources/ConversionScripts/: Conversion_0.1.1_to_0.2.0.mos
SMArtIInt/Resources/ExampleNeuralNets/: PI.py  requirements.txt
SMArtIInt/Resources/ExampleNeuralNets/NNHeatTransfer/: createLocalHeatTransferNN.py  model.onnx  model_small.tflite
SMArtIInt/Resources/ExampleNeuralNets/PIController/: PI.onnx  PI.py  PI.tflite  PI_stateful.onnx  PI_stateful.tflite
SMArtIInt/Resources/Include/: ModelicaUtilityHelper.h  ModelicaUtilityInterface.cpp
SMArtIInt/Tester/: package.mo  package.order
SMArtIInt/Tester/ExamplePI/: DoubleRoom_RNN.mo  DoubleRoom_RNNState.mo  DoubleRoom_RNNState_onnx.mo  DoubleRoom_RNNState_tflite.mo  DoubleRoom_RNN_onnx.mo  DoubleRoom_RNN_tflite.mo  StepTest_RNN.mo  StepTest_RNN_onnx.mo  StepTest_RNN_tflite.mo  StepTest_Stateful.mo  StepTest_Stateful_onnx.mo  StepTest_Stateful_tflite.mo  TF_PI_RNN.mo  TF_PI_RNN_onnx.mo  TF_PI_RNN_tflite.mo  TF_PI_Stateful.mo  TF_PI_Stateful_onnx.mo  TF_PI_Stateful_tflite.mo  package.mo  package.order
SMArtIInt/Tester/ExamplePI/ONNX/: DoubleRoom_RNNState_onnx.mo  DoubleRoom_RNN_onnx.mo  StepTest_RNN_onnx.mo  StepTest_Stateful_onnx.mo  TF_PI_RNN_onnx.mo  TF_PI_Stateful_onnx.mo  package.mo  package.order
SMArtIInt/Tester/ExamplePI/ReferenceModels/: DiscretePID.mo  DoubleRoom_ContinuousPI.mo  DoubleRoom_Discrete.mo  package.mo  package.order
SMArtIInt/Tester/ExamplePI/TFLite/: DoubleRoom_RNNState_tflite.mo  DoubleRoom_RNN_tflite.mo  StepTest_RNN_tflite.mo  StepTest_Stateful_tflite.mo  TF_PI_RNN_tflite.mo  TF_PI_Stateful_tflite.mo  package.mo  package.order
SMArtIInt/Tester/PipeHeatTransferExample/: NNHeatTransfer.mo  NNHeatTransfer_onnx.mo  NNHeatTransfer_tflite.mo  PipeLocalHeatTransfer.mo  PipeLocalHeatTransfer_onnx.mo  PipeLocalHeatTransfer_smallNN.mo  PipeLocalHeatTransfer_tflite.mo  TestModelEvaluation.mo  TestModelEvaluation_Ref.mo  TestModelEvaluation_onnx.mo  TestModelEvaluation_tflite.mo  TestPipe.mo  TestPipeRef.mo  TestPipe_onnx.mo  TestPipe_tflite.mo  package.mo  package.order
SMArtIInt/Tester/PipeHeatTransferExample/ONNX/: NNHeatTransfer_onnx.mo  PipeLocalHeatTransfer_onnx.mo  TestModelEvaluation_onnx.mo  TestPipe_onnx.mo  package.mo  package.order
SMArtIInt/Tester/PipeHeatTransferExample/ReferenceModels/: TestModelEvaluation_Ref.mo  TestPipeRef.mo  package.mo  package.order
SMArtIInt/Tester/PipeHeatTransferExample/TFLite/: NNHeatTransfer_tflite.mo  PipeLocalHeatTransfer_smallNN.mo  PipeLocalHeatTransfer_tflite.mo  TestModelEvaluation_tflite.mo  TestPipe_tflite.mo  package.mo  package.order
SMArtIInt/UsersGuide/: Overview.mo  package.mo
